# membrane_model

./: .gitignore  CMakeLists.txt  README.md  README.txt  config.cmake.in
AVSim/: CMakeLists.txt
AVSim/AorticSimulator/: AVSimulator.cpp  AVSimulator.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Messurer.cpp  Messurer.h
AVSim/AorticSimulator/Sewer/: MinEnergyDeformator.cpp  MinEnergyDeformator.h
AVSim/AorticSimulator/VirtSuture/: ContactSurface.cpp  ContactSurface.h
AVSim/Core/: AVMesh.h  AVMeshConnectivityHelpers.h  CMakeLists.txt  CollisionManagerInterface.cpp  CollisionManagerInterface.h  CollisionManagerInterface.inl  ForceAppliersInterface.h  ForceInterface.cpp  ForceInterface.h  NSWorldWrapper.cpp  NSWorldWrapper.h  NonLinearSolverCustom.cpp  NonLinearSolverCustom.h  Object3D.cpp  Object3D.h  RendererInterface.h  SignedDistanceField.h  TriangularMeshHelpers.cpp  TriangularMeshHelpers.h  World.cpp  World.h
AVSim/Core/Collision/: BridsonCollisionManager.cpp  BridsonCollisionManager.h  BridsonCollisionManager.inl  BulletCollisionAlgorithms.h  BulletCollisionManager.cpp  BulletCollisionManager.h  BulletVolumeTree.h  CGALCollissionManager.cpp  CGALCollissionManager.h  CMakeLists.txt  CollisionThickness.cpp  CollisionThickness.h  CollisionThickness.inl
AVSim/Core/ForceAppliers/: CMakeLists.txt  ForceAppliers.cpp  ForceAppliers.h
AVSim/Core/Forces/: BendHyperElastic.cpp  BendHyperElastic.h  CMakeLists.txt  ClampedBndPenalty.cpp  ClampedBndPenalty.h  ContactForce.cpp  ContactForce.h  DataDriven.cpp  DataDriven.h  DataGatherer.cpp  DataGatherer.h  EdgeLoad.cpp  EdgeLoad.h  Forces.cpp  Forces.h  ForcesCommon.cpp  ForcesCommon.h  Gent.h  HGO_GSTModel.h  HolzapfelOgdenGasser.h  HyperElastic.cpp  HyperElastic.h  HyperElastic.inl  HyperElasticModel.h  HyperElasticResponse.cpp  HyperElasticResponse.h  Integrator1D.cpp  Integrator1D.h  LinearElastic.cpp  LinearElastic.h  MSM.cpp  MSM.h  MaterialThicknessHelper.h  MayYin.h  MooneyRivlin.h  NeoGook.h  Pressure.cpp  Pressure.h  Pressure.inl  SDFForce.cpp  (+7 more)
AVSim/Core/Forces/DataDriven/: ConjugatePairSearcher.cpp  ConjugatePairSearcher.h  InterpolatorBase.h  KNearestInterpolant.h  KNearestInterpolant.inl  KNearestSearcher.h  LinearElasticInterpolant.cpp  LinearElasticInterpolant.h  LinearZeroSeacher.cpp  LinearZeroSeacher.h  MaterialResponse.cpp  MaterialResponse.h  ResponseStatistics.cpp  ResponseStatistics.h
AVSim/Core/IO/: CMakeLists.txt  HyperElasticFormat.cpp  HyperElasticFormat.h  HyperElasticFormat.inl  MeshlabPickPoint.cpp  MeshlabPickPoint.h  MetaTriFormat.cpp  MetaTriFormat.h  MetaTriMesh.cpp  MetaTriMesh.h  MetaTriMesh.inl  MultiTree.h  MultiTree.inl  Obj3dVTKSaver.cpp  Obj3dVTKSaver.h  VTKFormat.cpp  VTKFormat.h
AVSim/Core/MeshGen/: Bezier.h  Bezier.inl  CMakeLists.txt  ForAni3dFrtPrm.cpp  ForAni3dFrtPrm.h  Helper.cpp  Helper.h  StretchFigure.cpp  StretchFigure.h
AVSim/Core/Renderers/: CMakeLists.txt  GuiApplication.cpp  GuiApplication.h  GuiBackInterconnection.cpp  GuiBackInterconnection.h  Renderer.cpp  Renderer.h
AVSim/DomainCollection/: AniMeshCollection.h  Annulus.cpp  CMakeLists.txt  CilEllCoaptTemplate.cpp  CilinderPart.cpp  Circle.cpp  CrossPiece.cpp  CutAnnulus.cpp  EightSpherePart.cpp  EllipsoidPart.cpp  FragmentalRectangle.cpp  HalfCircle.cpp  HalfSphere.cpp  HoleyRectangle.cpp  IdealHexagon.cpp  RectangleWithOxLine.cpp  RectangleWithOxOyLine.cpp
AVSim/LeafTemplates/: CMakeLists.txt  Elliptic.cpp  Elliptic.h  OldOzaki.cpp  Ozaki.cpp  TemplatesCollection.h  ThubricarValve.cpp
AVSim/Solvers/: CMakeLists.txt  LinearSolver.cpp  LinearSolver.h  LinearSolverEigen.cpp  LinearSolverEigen.h  LinearSolverInmost.cpp  LinearSolverInmost.h  LinearSolverInterface.cpp  LinearSolverInterface.h  NonLinearSolverInterface.cpp  NonLinearSolverInterface.h  NonLinearSolverKinsol.cpp  NonLinearSolverKinsol.h  NonLinearSolverPetsc.cpp  NonLinearSolverPetsc.h
benchmarks/: BenchCommon.h  Benchmarks.cpp  Benchmarks.h  CMakeLists.txt  DataDrivenBench.cpp  DataDrivenStatTests.cpp  three_leaflet.cpp
benchmarks/ConjugatePairs/: CMakeLists.txt  CircleTest.cpp  CircleTest.h  plot.R
benchmarks/ContactBenchs/: CMakeLists.txt  EllipsoidContact.cpp  runContactBenchs.cpp
benchmarks/ElasticBenchs/: CMakeLists.txt  ElasticBenchmarks.cpp  runElasticBenchmark.cpp
benchmarks/IdealSuturedLeaf/: CMakeLists.txt  VanLoonBench.cpp  VanLoonBench.h  runBench.cpp
benchmarks/LinVsNonlin/: CMakeLists.txt  LinVsNonlin.cpp  runLinVsNonlin.cpp
benchmarks/Sewing/: CMakeLists.txt  ForOptimizerOneLeaf.cpp  ForOptimizerOneLeaf.h  SewOnCilinder.cpp  TestVirtualSuturer.cpp  TestVirtualSuturer.h  VirtualSuturer.cpp  VirtualSuturer.h
benchmarks/general/: CMakeLists.txt  examples.cpp  examples.h  main.cpp  model.cpp  model.h
cmake/: DownloadAni3d.cmake  DownloadRpoly.cmake  Downloadcgal.cmake  Downloadeigen3.cmake  Downloadgsl.cmake  Downloadinmost.cmake  Downloadnlohmann_json.cmake  FindAni3d.cmake  FindFortran.cmake  FindMATIO.cmake  Findrpoly.cmake
examples/: CMakeLists.txt
examples/hausdorff_distance/: CMakeLists.txt  main.cpp
